新增ThreadLocal内存泄漏测试